# lab_oop_4

./: CMakeLists.txt  Figure.hpp  Pentagon.hpp  Rombus.hpp  Trapezoid.hpp  array.hpp  main.cpp  test.cpp
